# accumulator-mmr

./: Cargo.toml  README.md  rustfmt.toml
benches/: helper_benchmark.rs  mmr_benchmark.rs
data/: previous_state.txt
script/: proof.sh  verify.sh
src/: error.rs  hash.rs  helper.rs  lib.rs  main.rs  merge.rs  mmr.rs  mmr_store.rs  util.rs
src/tests/: mod.rs  test_mmr.rs
