[package]
name = "accumulator-mmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = []

[dependencies]
cfg-if = "0.1"
bytes = "1.1.0"
blake2b-rs = "0.1.4"
hex = "0.4.3"


[dev-dependencies]
faster-hex = "0.3"
criterion = "0.3"
rand = "0.6"
proptest = "0.9.4"
lazy_static = "1.3.0"

[[bench]]
name = "mmr_benchmark"
harness = false

[[bench]]
name = "helper_benchmark"
harness = false


[profile.release]
rpath = true
lto   = true
debug = false

# panic = 'abort'
